[front-end] Simplify type definitions in configSlice
